# project-pipe

./: project-pipe.cabal
app/: Main.hs
src/: Interpreter.hs  Parser.hs  Pipe.hs
test/: PipeTest.hs
