cabal-version:      2.4
name:               project-pipe
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/ConnorDillon/project-pipe

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Connor Dillon
maintainer:         connor@cdillon.nl

-- A copyright notice.
-- copyright:
category:           Data

library
    exposed-modules:  Parser, Interpreter
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        OverloadedStrings,
        OverloadedLists
    build-depends:
        base ^>=4.16.4.0,
        megaparsec ^>=9.3.0,
        parser-combinators ^>=1.3.0,
        containers ^>=0.6.7,
        vector ^>= 0.13.0.0,
        text ^>= 2.0.2,
        mtl ^>= 2.3.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable pipe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        project-pipe

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite pipe-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          PipeTest.hs
    default-extensions:
        OverloadedStrings,
        OverloadedLists
    build-depends:
        base ^>=4.16.4.0,
        project-pipe,
        hspec ^>=2.10.10,
        QuickCheck ^>=2.14.2,
        megaparsec ^>=9.3.0,
        hspec-megaparsec ^>=2.2.0,
        vector ^>= 0.13.0.0,
        text ^>= 2.0.2


